Updated github actions config

--- a/.github/workflows/terraform-deployment.yml
+++ b/.github/workflows/terraform-deployment.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Terraform Format Check
         run: terraform fmt -check
+        working-directory: terraform
 
   terraform-plan:
     runs-on: ubuntu-latest
@@ -33,13 +34,15 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.0  # Specify the Terraform version you want to use
+          terraform_version: 1.6.3  # Specify the Terraform version you want to use
 
       - name: Terraform Init
         run: terraform init
+        working-directory: terraform
 
       - name: Terraform Plan
         run: terraform plan
+        working-directory: terraform
 
   terraform-apply:
     runs-on: ubuntu-latest
@@ -51,12 +54,14 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.0  # Specify the Terraform version you want to use
+          terraform_version: 1.6.3  # Specify the Terraform version you want to use
 
       - name: Terraform Init
         run: terraform init
+        working-directory: terraform
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
+        working-directory: terraform  # Add this line to ensure correct directory
         env:
-          TF_VAR_example: ${{ secrets.EXAMPLE_SECRET }}  # Example for passing environment variables or secrets
+          TF_VAR_example: ${{ secrets.EXAMPLE_SECRET }}  # passing environment variables or secrets
