--- a/.github/workflows/terraform-deployment.yml
+++ b/.github/workflows/terraform-deployment.yml
@@ -18,7 +18,10 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.6.3  # Specify the Terraform version you want to use
+          terraform_version: 1.8.4
+
+      - name: List Terraform Directory
+        run: ls -al terraform  # Debug step
 
       - name: Terraform Format Check
         run: terraform fmt -check
@@ -26,7 +29,7 @@ jobs:
 
   terraform-plan:
     runs-on: ubuntu-latest
-    needs: terraform-check  # Ensure this job runs after the check
+    needs: terraform-check
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -34,7 +37,10 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.6.3  # Specify the Terraform version you want to use
+          terraform_version: 1.8.4
+
+      - name: List Terraform Directory
+        run: ls -al terraform  # Debug step
 
       - name: Terraform Init
         run: terraform init
@@ -46,7 +52,7 @@ jobs:
 
   terraform-apply:
     runs-on: ubuntu-latest
-    needs: terraform-plan  # Ensure this job runs after the plan
+    needs: terraform-plan
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -54,7 +60,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.6.3  # Specify the Terraform version you want to use
+          terraform_version: 1.8.4
 
       - name: Terraform Init
         run: terraform init
@@ -62,6 +68,6 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
-        working-directory: terraform  # Add this line to ensure correct directory
+        working-directory: terraform
         env:
-          TF_VAR_example: ${{ secrets.EXAMPLE_SECRET }}  # passing environment variables or secrets
+          TF_VAR_example: ${{ secrets.EXAMPLE_SECRET }}
