--- a/.github/workflows/terraform-deployment.yml
+++ b/.github/workflows/terraform-deployment.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.8.4
+          terraform_version: 1.8.4  # Consistent Terraform version
 
       - name: List Terraform Directory
         run: ls -al terraform  # Debug step
@@ -29,7 +29,7 @@ jobs:
 
   terraform-plan:
     runs-on: ubuntu-latest
-    needs: terraform-check
+    needs: terraform-check  # Ensure this job runs after the check
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -37,17 +37,21 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.8.4
+          terraform_version: 1.8.4  # Use consistent version
 
-      - name: List Terraform Directory
-        run: ls -al terraform  # Debug step
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2  # Change this to your desired AWS region
 
       - name: Terraform Init
         run: terraform init
         working-directory: terraform
 
       - name: Terraform Plan
-        run: terraform plan
+        run: terraform plan -out=tfplan
         working-directory: terraform
 
   terraform-apply:
@@ -60,14 +64,17 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.8.4
+          terraform_version: 1.8.4  # Use consistent version
 
-      - name: Terraform Init
-        run: terraform init
-        working-directory: terraform
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2  # Change this to your desired AWS region
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve tfplan
         working-directory: terraform
         env:
           TF_VAR_example: ${{ secrets.EXAMPLE_SECRET }}
