--- a/.github/workflows/terraform-deployment.yml
+++ b/.github/workflows/terraform-deployment.yml
@@ -42,9 +42,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2  # Change this to your desired AWS region
+          role-to-assume: arn:aws:iam::767397941516:role/GithubActionsRole  # Update with your role ARN
+          aws-region: eu-west-3  # Change this to your desired AWS region
 
       - name: Terraform Init
         run: terraform init
@@ -69,8 +68,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::767397941516:role/GithubActionsRole  # Update with your role ARN
           aws-region: us-west-2  # Change this to your desired AWS region
 
       - name: Terraform Apply
