--- a/.github/workflows/terraform-deployment.yml
+++ b/.github/workflows/terraform-deployment.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main  # Change this to your default branch if different
+permissions:
+  id-token: write
 
 jobs:
   terraform-check:
