--- a/.github/workflows/terraform-deployment.yml
+++ b/.github/workflows/terraform-deployment.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - main  # Change this to your default branch if different
+
 permissions:
   id-token: write
 
@@ -55,6 +56,12 @@ jobs:
         run: terraform plan -out=tfplan
         working-directory: terraform
 
+      - name: Upload Terraform Plan
+        uses: actions/upload-artifact@v2
+        with:
+          name: tfplan
+          path: terraform/tfplan  # Ensure this path matches where tfplan is created
+
   terraform-apply:
     runs-on: ubuntu-latest
     needs: terraform-plan
@@ -73,8 +80,13 @@ jobs:
           role-to-assume: arn:aws:iam::767397941516:role/GithubActionsRole  # Update with your role ARN
           aws-region: eu-west-3  # Change this to your desired AWS region
 
+      - name: Download Terraform Plan
+        uses: actions/download-artifact@v2
+        with:
+          name: tfplan
+
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
         working-directory: terraform
         env:
-          TF_VAR_example: ${{ secrets.EXAMPLE_SECRET }}
+          TF_VAR_example: ${{ secrets.EXAMPLE_SECRET }}  # Ensure your secret is set correctly
