--- a/.github/workflows/terraform-deployment.yml
+++ b/.github/workflows/terraform-deployment.yml
@@ -53,14 +53,14 @@ jobs:
         working-directory: terraform
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan
+        run: terraform plan -out=terraform/tfplan  # Save tfplan in the terraform directory
         working-directory: terraform
 
       - name: Upload Terraform Plan
         uses: actions/upload-artifact@v3  # Updated to the latest version
         with:
           name: tfplan
-          path: terraform/tfplan  # Ensure this path matches where tfplan is created
+          path: terraform/tfplan  # Correct path for the uploaded tfplan
 
   terraform-apply:
     runs-on: ubuntu-latest
@@ -86,7 +86,7 @@ jobs:
           name: tfplan
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve terraform/tfplan  # Make sure to specify the correct path
         working-directory: terraform
         env:
           TF_VAR_example: ${{ secrets.EXAMPLE_SECRET }}  # Ensure your secret is set correctly
